<resources>
    <string name="app_name">中医智能诊断</string>
    <string name="search">症状搜索</string>
    <string name="front">正面</string>
    <string name="back">反面</string>
    <string name="head">头和面部</string>
    <string name="chest">胸和肺部</string>
    <string name="abdomen">腹部</string>
    <string name="reproduction">生殖</string>
    <string name="limbs">四肢</string>
    <string name="groin">腹股</string>
    <string name="body">其他</string>
    <string name="head_specific">头部症状</string>
    <string name="chest_specific">胸部症狀</string>
    <string name="back_specific">背部症狀</string>
    <string name="headache">头痛</string>
    <string name="summary">症狀总结</string>
    <string name="personalInformation">基本信息</string>
    <string name="login">登录</string>
    <string name="passwordWhereabout">忘记密码</string>
    <string name="register">注册账户</string>
    <string name="registerTitle">手机注册</string>
    <string name="default_text">--</string>
</resources>