<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <EditText
        android:layout_width="230sp"
        android:layout_height="wrap_content"
        style="@style/Theme.App.Base"
        android:paddingTop="150sp"
        android:layout_gravity="center_horizontal"
        android:maxLines="1"
        android:hint="用户名"/>

    <EditText
        android:layout_width="230sp"
        android:layout_height="wrap_content"
        style="@style/Theme.App.Base"
        android:layout_marginTop="40sp"
        android:layout_gravity="center_horizontal"
        android:maxLines="1"
        android:hint="密码"/>
    
    <Button
        android:layout_width="230sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:background="@color/holo_blue_light"/>
    
    <RelativeLayout
        android:layout_width="230sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordWhereabout"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_alignParentEnd="true"/>
        
    </RelativeLayout>


</LinearLayout>